fixed auth/register overflow

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -1,3 +1,3 @@
 body, html{
-  height: 100%;
+  height: 100vh;
 }
